--- a/examples/data-processing/requirements.txt
+++ b/examples/data-processing/requirements.txt
@@ -2,7 +2,7 @@ attrs==19.3.0
 bitstruct==8.11.0
 botocore==1.17.43
 can-decoder
-canedge-browser
+canedge-browser>=0.0.5
 canmatrix==0.9.1
 click==7.1.2
 docutils==0.15.2
