--- a/examples/data-processing/requirements.txt
+++ b/examples/data-processing/requirements.txt
@@ -1,20 +1,21 @@
 aiobotocore==1.3.0
-aiohttp>=3.7.4
+aiohttp==3.7.4.post0
 aioitertools==0.7.1
 async-timeout==3.0.1
 attrs==21.2.0
 bitstruct==8.11.1
 botocore==1.20.49
-can-decoder>=0.1.1
+can-decoder>=0.1.3
 canedge-browser>=0.0.7
 canmatrix==0.9.1
 chardet==4.0.0
 click==8.0.1
 colorama==0.4.4
-fsspec==2021.5.0
+fsspec==2021.7.0
 future==0.18.2
 idna==3.2
 importlib-metadata==4.5.0
+J1939-PGN==0.4
 jmespath==0.10.0
 mdf-iter>=0.0.4
 multidict==5.1.0
@@ -23,11 +24,11 @@ pandas==1.2.4
 pathlib2==2.3.5
 python-dateutil==2.8.1
 pytz==2021.1
-s3fs==2021.5.0
+Rx==3.2.0
+s3fs==0.4.2
 six==1.16.0
 typing-extensions==3.10.0.0
 urllib3==1.26.5
 wrapt==1.12.1
 yarl==1.6.3
 zipp==3.4.1
-j1939_pgn==0.4
