Updated MATLAB scripts: Added new examples for how to load MF4 (unfinalized, finalized, DBC decoded) via the Vehicle Network Toolbox, including via single files, datastores and tall arrays. Also added example on loading MAT files. Added Python script for automating the export of MF4 files to DBC decoded MF4 and MAT.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ LOG2/
 *LIN.dbc
 *NMEA-2000-CSS-Electronics-v*
 *find_data_event.py
+*CSS-Electronics-J1939-2021-08_v1.0.dbc
+logging.py
+*matlab_raw_to_tallarray.m
