--- a/examples/other/asammdf-basics/requirements.txt
+++ b/examples/other/asammdf-basics/requirements.txt
@@ -1,22 +1,25 @@
-asammdf==6.4.4
-attrs==19.3.0
-bitstruct==8.11.0
-canmatrix==0.9.1
-cchardet==2.1.5
-click==7.1.2
-cycler==0.10.0
+asammdf==7.0.2
+attrs==21.4.0
+canmatrix==0.9.5
+click==8.1.2
+colorama==0.4.4
+cycler==0.11.0
+fonttools==4.32.0
 future==0.18.2
-kiwisolver==1.2.0
-lxml==4.6.3
-lz4==3.1.0
-matplotlib==3.4.3
-natsort==7.0.1
-numexpr==2.7.1
-numpy==1.21.2
-pandas==1.1.0
-pathlib2==2.3.5
-Pillow==8.2.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-six==1.15.0
+importlib-metadata==4.11.3
+isal==0.11.1
+kiwisolver==1.4.2
+lxml==4.8.0
+lz4==4.0.0
+matplotlib==3.5.1
+numexpr==2.8.1
+numpy==1.21.6
+packaging==21.3
+pandas==1.3.5
+Pillow==9.1.0
+pyparsing==3.0.8
+python-dateutil==2.8.2
+pytz==2022.1
+six==1.16.0
+typing-extensions==4.1.1
+zipp==3.8.0
