--- a/examples/data-processing/requirements.txt
+++ b/examples/data-processing/requirements.txt
@@ -1,34 +1,32 @@
-aiobotocore==1.3.0
-aiohttp==3.7.4.post0
-aioitertools==0.7.1
-async-timeout==3.0.1
-attrs==21.2.0
-bitstruct==8.11.1
-botocore==1.20.49
-can-decoder>=0.1.3
+aiobotocore==2.1.2
+aiohttp==3.8.1
+aioitertools==0.10.0
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+botocore==1.23.24
+can-decoder>=0.1.5
 canedge-browser>=0.0.8
-canmatrix==0.9.1
-chardet==4.0.0
-click==8.0.1
+canmatrix==0.9.5
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.2
 colorama==0.4.4
-fsspec==2021.7.0
-future==0.18.2
-idna==3.2
-importlib-metadata==4.5.0
-J1939-PGN==0.4
+frozenlist==1.3.0
+fsspec==2022.2.0
+future==0.18.3
+idna==3.4
 jmespath==0.10.0
 mdf-iter>=2.0.4
-multidict==5.1.0
-numpy==1.23.2
-pandas==1.4.3
-pathlib2==2.3.5
-python-dateutil==2.8.1
-pytz==2021.1
-Rx==3.2.0
-s3fs==0.4.2
+multidict==6.0.2
+numpy==1.24.1
+pandas==1.5.3
+python-dateutil==2.8.2
+pytz==2022.1
+s3fs==2022.2.0
 six==1.16.0
-typing-extensions==3.10.0.0
-urllib3==1.26.5
-wrapt==1.12.1
-yarl==1.6.3
-zipp==3.4.1
+typing-extensions==4.1.1
+urllib3==1.26.9
+wrapt==1.14.0
+yarl==1.7.2
+J1939-PGN==0.4
